Fix for buttonAlign center and right in FF2
git-svn-id: http://code.extjs.com/svn/ext/trunk@3977 c0a82769-a6a8-4f8a-96ba-7530dc2e272d

--- a/resources/css/structure/toolbar.css
+++ b/resources/css/structure/toolbar.css
@@ -158,6 +158,13 @@
 .x-toolbar-ct {
     width:100%;
 }
+/*
+  Fix for buttonAlign center and right in FF2
+  Make x-toolbar-ct NOT stretch 100%
+*/
+.ext-gecko2 .x-toolbar-ct {
+    width: auto;
+}
 
 .x-toolbar-right td {
     text-align: center;
